add redirect_js for Mailwise and remote service define a shared function gtm.html for google tag manager

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -11,8 +11,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=11" />
-    {{- $buildnum := (now.Format "200601020304") }}
-    <meta name="date" content="{{$buildnum}}" scheme="YYYYMMDDmmhh">
+    {{- $buildnum := (now.Format "20060102") }}
+    <meta name="date" content="{{$buildnum}}" scheme="YYYYMMDD">
     {{- $sitename := "" }}
     {{- $servicetype := "" }}
     {{- with .Site.Params.service_type }}
@@ -135,30 +135,11 @@
     -}}
     <script src="https://unpkg.com/vue@3.3.4/dist/vue.global.prod.js"></script>
     {{- end }}
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-      })(window,document,'script','dataLayer','GTM-5ZR5GF');</script>
-
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-      })(window,document,'script','dataLayer','GTM-5N49D3');</script>
-    <!-- End Google Tag Manager -->
-
+    {{- template "gtm" dict "key" "GTM-5ZR5GF" }}
+    {{- template "gtm" dict "key" "GTM-5N49D3" }}
     {{- if and (eq $.Site.Params.product "kintone") (eq $.Site.Params.TargetRegion "JP") }}
-    <!-- Google Tag Manager for kintone certification -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-      new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-      j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-      'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-      })(window,document,'script','dataLayer','GTM-K98FR27D');</script>
-    <!-- End Google Tag Manager -->
+      {{- template "gtm" dict "key" "GTM-K98FR27D" }}
     {{- end }}
-
     {{- $chats := .Site.Params.chat }}
     {{- $chat := split .Site.Params.chat "," }}
     {{- $curpage := .Page.RelPermalink }}
