--- a/layouts/kintone_tutorial/baseof.html
+++ b/layouts/kintone_tutorial/baseof.html
@@ -20,20 +20,8 @@
     {{- end}}
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="{{ printf "%s?%s" "javascripts/kintone-tutorial.js" $buildnum | relURL }}"></script>
-    <!-- Google Tag Manager -->
-    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-5ZR5GF');</script>
-
-        <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-        new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-        j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-        'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-        })(window,document,'script','dataLayer','GTM-5N49D3');</script>
-      <!-- End Google Tag Manager -->
-
+    {{- template "gtm" dict "key" "GTM-5ZR5GF" }}
+    {{- template "gtm" dict "key" "GTM-5N49D3" }}
 </head>
   <body class="font-{{.Lang}}">
     <div class="tutorial-page-header"></div>
