Fix to hover at logo

--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -156,11 +156,13 @@ td {
     color: #000;
     font-weight: 600;
 }
+
 .logo-link:hover,
-.tutorial-logo {
+.tutorial-logo:hover {
     text-decoration: none;
     cursor: pointer;
 }
+
 /* -------------------- end of Header */
 
 
