--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -46,6 +46,9 @@
                 {{- if and (eq $.Site.Params.id_search true) (.Params.aliases) }}
                     {{- template "articlenumber" . }} 
                 {{- end }}
+                {{- if .Params.labels }}
+                    {{- template "headerlabel" . }}
+                {{- end }}
                 {{ .Content }}
             </article>
             {{- if ne $.Site.Params.toc_in_tree true -}}
