--- a/static/stylesheets/application.css
+++ b/static/stylesheets/application.css
@@ -746,6 +746,22 @@ h6 + .id-link-button {
     z-index: 999;
 }
 
+/* Header label -------------------- */
+.header-label-bar {
+    margin-top: -25px;
+    margin-bottom: 30px;
+    width: 100%;
+    height: 2em;
+    font-size: 14px;
+    color: #767676;
+}
+.header-label {
+   color: #000;
+   padding: 3px 8px;
+   border-radius: 4px;
+   font-size: 0.8rem;
+}
+/* -------------------- end of Header label */
 
 .codeblock-wrapper {
     position: relative;
