--- a/static/stylesheets/theme_us.css
+++ b/static/stylesheets/theme_us.css
@@ -220,7 +220,7 @@
   border-image-source: linear-gradient(to top, #4A4B4C 0%, #EF3F24 100%);
 }
 
-/* /general/の「監査ログの一覧」で使用する設定 **************************************/
+/* /general/と/k/の「監査ログの一覧」で使用する設定 **************************************/
 
 .id-header:has(h3.audit){
   border-bottom: 3px solid #A42F29;
