modified a meta tag name

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -71,7 +71,7 @@
     <meta property="og:description" content="{{$desc}}">
     <meta property="og:locale" content="{{.Site.LanguageCode}}">
     <meta name="apple-mobile-web-app-title" content="{{$title}}">
-    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     {{- if and (ne .Site.Params.product "Office") (ne .Site.Params.product "Mailwise") (ne .Site.Params.product "Remote")}}
     {{- partial "alternatelink" . }}
