--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -100,7 +100,7 @@
     {{- end }}
     {{- if eq .Params.type "search_result"}}
     <link rel="stylesheet" href="{{ printf "%s?%s" "stylesheets/search_result.css" $buildnum | relURL }}">
-        {{- if ne .Site.Params.google_search true -}}
+    {{- if and ( ne .Site.Params.google_search true ) ( ne .Site.Params.bing_search true ) -}}
     <link href="//c.marsflag.com/mf/mfx/css/mfx-serp.css" rel="stylesheet" type="text/css" media="all" charset="UTF-8">
     <link rel="stylesheet" href="{{ printf "%s?%s" "stylesheets/mf_search.css" $buildnum | relURL }}">
         {{- end }}
@@ -130,6 +130,7 @@
     {{- end -}}
     {{- if or
         ( and (eq .Params.type "search_result") (eq .Site.Params.google_search true) )
+        ( and (eq .Params.type "search_result") (eq .Site.Params.bing_search true) )
         (eq .Params.type "gr/section_top_video")
         (eq .Params.type "gr6/home")
     -}}
