--- a/layouts/print_page/single.html
+++ b/layouts/print_page/single.html
@@ -192,7 +192,7 @@
         <li>
                 <!-- in case of the section string is empty, the title is not displayed -->
                 {{- if ne $sectStr "" -}}
-            <span class="item-title"> 
+            <span class="item-title">
                 <a class="indexref" href="#{{- anchorize .RelPermalink -}}">{{- $sectStr -}}&nbsp;{{- partial "title" . -}}</a>
             </span>
                 {{- end -}}
@@ -276,7 +276,7 @@
                 <!-- body -->
                 {{- $title := partial "title" . -}}
                 {{- template "contentbody" (dict "sectList" $sectList "sectStr" $sectStr "content" .Content "product" $product "productId" $productId "weight" $parent.Params.weight "ancid" .RelPermalink "title" $title "lang" .Language) }}
-                
+
                 <!-- add a sub section （go down the section tree） -->
                 {{- $sectList = $sectList | append 1 -}}
                 {{- $parent.Scratch.Set "sectList" $sectList -}}
@@ -313,7 +313,7 @@
                 <!-- body -->
                 {{- $title := partial "title" . -}}
                 {{- template "contentbody" (dict "sectList" $sectList "sectStr" $sectStr "content" .Content "product" $product "productId" $productId "weight" $parent.Params.weight "ancid" .RelPermalink "title" $title "lang" .Language) }}
-        
+
                 <!-- increment the section number -->
                 {{- template "nextsection" $parent -}}
             {{- end -}}
@@ -332,11 +332,11 @@
     {{- $weight := .weight -}}
     {{- $ancid := .ancid -}}
     {{- $lang := .lang -}}
-    
+
     {{- if ne $sectStr "" -}}
     <div class="article">
         <div class="wrapper">
-          
+
         <!-- in case of the section string is empty, the title is not displayed -->
         {{- if ne $sectStr "" -}}
             {{- $class := "content-title" -}}
@@ -348,9 +348,9 @@
             {{- end -}}
                 <h1 class="{{ $class }} {{ $chapter }} bm-{{ (len $sectList) }}" id="{{- anchorize $ancid -}}">{{- $sectStr -}}&nbsp;{{- $title -}}</h1>
         {{- end -}}
-                    
+
         {{- if ne $cont "" }}
-                <div class="content-body">          
+                <div class="content-body">
                     <!-- make a collection of A tag -->
                     {{- $links := findRE "<a +href=\"[\\w!\\?/\\+\\-_~=;\\.,\\*&@#\\$%\\(\\)'\\[\\]]*\" *(target=\"_blank\")*>" $cont -}}
 
@@ -465,6 +465,16 @@
                         {{- if eq $weight 400 -}}
                             {{- $targeturl = (printf "/%s/%s/kep4" $productId $lang) -}}
                         {{- end -}}
+                    {{- else if eq $product "kop" -}}
+                        {{- if eq $weight 100 -}}
+                            {{- $targeturl = (printf "/%s/%s/kop1_overview" $productId $lang) -}}
+                        {{- end -}}
+                        {{- if eq $weight 200 -}}
+                            {{- $targeturl = (printf "/%s/%s/kop1_setup" $productId $lang) -}}
+                        {{- end -}}
+                        {{- if eq $weight 300 -}}
+                            {{- $targeturl = (printf "/%s/%s/kop1_user" $productId $lang) -}}
+                        {{- end -}}
                     {{- end -}}
 
                     {{- if ne $targeturl "" }}
@@ -506,9 +516,9 @@
                     {{- end -}}
 
                     {{- $cont | safeHTML -}}
-                </div><!-- close content-body -->  
+                </div><!-- close content-body -->
         {{- end -}}
-    
+
         </div><!-- close wrapper -->
     </div><!-- close article -->
     {{- end -}}
