--- a/static/stylesheets/custom_gr6.css
+++ b/static/stylesheets/custom_gr6.css
@@ -53,6 +53,13 @@
   line-height: 1em;
 }
 
+.home-search-logo-text {
+  color: var(--link-secondary-color);
+}
+.home-search-logo-text a {
+  text-decoration: underline;
+}
+
 .home-menu {
   color: var(--color-body);
 }
