--- a/layouts/index.html
+++ b/layouts/index.html
@@ -25,7 +25,11 @@
                         {{- end }}
                         </div>
                     </form>
-                    <div id="logo_place" class="search-logo"></div>
+                    <div id="logo_place" class="search-logo {{ if eq .Site.Params.bing_search true }} search-logo-bing{{ end }}">
+                        {{- if eq .Site.Params.bing_search true }}
+                            <span>{{ i18n "search_bing" }} (<a href="https://www.microsoft.com/en-gb/privacy/privacystatement" target="_blank">{{ i18n "search_bing_legal" }}</a>)</span>
+                        {{- end }}
+                    </div>
                 </div>
               <nav class="col-flex">
                     {{ .Content }}
