--- a/static/stylesheets/custom_preview_site.css
+++ b/static/stylesheets/custom_preview_site.css
@@ -28,6 +28,11 @@
     background-color: #fbf6c1;
 }
 
+.preview_list_title {
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
 .preview_list_item li {
     list-style-type: none;
 }
