--- a/layouts/print_page/single.html
+++ b/layouts/print_page/single.html
@@ -14,7 +14,7 @@
     <meta name="pagelayout" content="SinglePage"/>
     <meta name="displaydoctitle" content="true"/>
 
-    <link rel="stylesheet" href="https://js.cybozu.com/font-awesome/v4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{{ printf "%s?%s" "stylesheets/application.css" $buildnum | relURL }}">
     <link rel="stylesheet" href="{{ printf "%s?%s" "stylesheets/print.css" $buildnum | relURL }}">
     {{- with .Site.Params.custom_css }}
