--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -94,7 +94,7 @@
     <link rel="stylesheet" href="{{ printf "%s?%s" "stylesheets/application.css" $buildnum | relURL }}">
     <link rel="stylesheet" href="{{ "stylesheets/zoom.css" | relURL }}">
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     {{- if .IsHome}}
     <link rel="stylesheet" href="{{ printf "%s?%s" "stylesheets/home.css" $buildnum | relURL }}">
     {{- end }}
@@ -112,7 +112,7 @@
         {{- end }}
     {{- end}}
 
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.3.12/jstree.min.js"></script>
     <script src="{{ "javascripts/zoom.js" | relURL }}"></script>
     <script src="{{ printf "%s?%s" "javascripts/preload.js" $buildnum | relURL }}"></script>
@@ -134,7 +134,7 @@
         (eq .Params.type "gr/section_top_video")
         (eq .Params.type "gr6/home")
     -}}
-    <script src="https://unpkg.com/vue@3.5.8/dist/vue.global.prod.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/3.5.8/vue.global.prod.min.js"></script>
     {{- end }}
     {{- template "gtm" dict "key" "GTM-5ZR5GF" }}
     {{- template "gtm" dict "key" "GTM-5N49D3" }}
